--- a/assets/styles/prices.css
+++ b/assets/styles/prices.css
@@ -1,8 +1,9 @@
 .prices__info {
     max-width: calc(1170px + 15px * 2);
-    padding: 0 15px;
+    padding: 104px 15px 0;
     height: 900px;
     margin: 0 auto;
+    background-color: #F5F5F5;
 }
 .prices__tittle {
     font-family: 'Raleway';
@@ -12,8 +13,9 @@
     line-height: 42px;
     color: #000000;
     text-align: center;
-    margin: 54px 0;
+    margin-bottom: 54px;
 }
+
 .prices__description {
     font-family: 'Raleway';
     font-style: normal;
@@ -102,7 +104,7 @@
     align-items: center;
     justify-content: center;
 }
-.active {
+.prices__option__offers:hover {
     box-shadow: 0px 4px 10px #33333333;
     align-self: flex-start;
 }
