--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -8,3 +8,8 @@
     padding: 0;
     box-sizing: border-box;
 }
+.content {
+    max-width: calc(1170px + 15px*2);
+    padding: 0 15px;
+    margin: 0 auto;
+}
