--- a/assets/styles/reviews.css
+++ b/assets/styles/reviews.css
@@ -1,8 +1,7 @@
-.reviews__info {
-    max-width: calc(1170px + 15px * 2);
-    padding: 0 15px;
-    height: 630px;
-    margin: 0 auto;
+.reviews {
+    padding: 104px 0 64px;
+    min-height: 100vh;
+    background-color: #FFFFFF;
 }
 .reviews__info__tittle {
     font-family: 'Raleway';
@@ -12,7 +11,7 @@
     line-height: 42px;
     color: #000000;
     text-align: center;
-    margin: 104px 0 54px;
+    margin: 0 0 54px;
     text-transform: uppercase;
 }
 .reviews__info__description {
@@ -36,11 +35,9 @@
     display:flex;
     justify-content: space-between;
 }
-.review__container:nth-child(2) {
-    margin: 0 30px;
-}
-.review {
-    margin: 0 30px 0 0;
+.review{
+    max-width: 370px;
+    width: 100%;
 }
 
 .review__subject__text {
@@ -82,26 +79,28 @@
 .review__autor__image {
     margin: 0 30px 0 0;
 }
-.bunner__container {
-    max-width: calc(1170px + 15px * 2);
-    height: 442px;
-    padding: 104px 15px 0;
-    margin: 0 auto;
+.design {
+    padding: 104px 0 50px;
     position: relative;
     background-image: url(../images/reviews/image.png);
     background-size: cover;
 }
-.bunner__container::after {
+.design::after {
     content: "";
-    max-width: calc(1170px + 15px * 2);
-    height: 442px;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 2;
 }
-.bunner__tittle {
+.design__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.design__tittle {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 400;
@@ -112,7 +111,7 @@
     color: #FFFFFF;
     margin: 0 0 54px 0;
 }
-.bunner__description {
+.design__description {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 400;
@@ -122,7 +121,7 @@
     text-align: center;
     margin: 40px 0 73px;
 }
-.bunner__btn {
+.design__btn {
     border: 2px solid #FFFFFF;
     background-color: transparent;
     width: 370px;
@@ -135,6 +134,5 @@
     color: #FFFFFF;
     text-align: center;
     text-transform: capitalize;
-    position: absolute;
-    left: 35%;
+    margin: 0 auto;
 }
