--- a/assets/styles/reviews.css
+++ b/assets/styles/reviews.css
@@ -99,6 +99,8 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    position: relative;
+    z-index: 10;
 }
 .design__tittle {
     font-family: 'Raleway';
