fixed:font-family

--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -12,6 +12,7 @@
     align-items: center;
 }
 .nav__link {
+    font-family: 'Open Sans';
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
