--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -1,12 +1,11 @@
 .header {
     padding: 22px 0;
     background-color: #000000;
-}
-.cont {
     position: sticky;
-    z-index: 9999;
     top: 0;
-    left: 0;
+    z-index: 9999;
+}
+.box {
     display: flex;
     justify-content: space-between;
     align-items: center;
