--- a/assets/styles/banner.css
+++ b/assets/styles/banner.css
@@ -1,6 +1,8 @@
 .banner {
     background-image: url(../images/banner/image.png);
     background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
     min-height: 100vh;
     margin: 0 auto;
     padding: 208px 0 185px;
