--- a/assets/styles/banner.css
+++ b/assets/styles/banner.css
@@ -5,6 +5,9 @@
     margin: 0 auto;
     padding: 208px 0 185px;
     position: relative;
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .banner::after {
     content: "";
@@ -33,6 +36,7 @@
     margin-left: 0;
 }
 .banner__description {
+    max-width: 270px;
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 400;
@@ -53,4 +57,8 @@
     border: 2px solid #FFFFFF;
     background-color: transparent;
     color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none; 
 }
