--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -5,6 +5,8 @@
 @import url(./header.css);
 @import url(./banner.css);
 @import url(./footer.css);
+@import url(./forms.css);
+@import url(./social.css);
 
 * {
     margin: 0;
