--- a/assets/styles/social.css
+++ b/assets/styles/social.css
@@ -28,6 +28,7 @@
 }
 .social__media__links {
     display: flex;
+    align-items: flex-end;
 }
 .social__media__link:not(:last-child) {
     margin: 0 45px 0 0;
