--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -25,3 +25,15 @@
 .nav__link:last-child {
     margin: 0 30px 0 50px;
 }
+.header__menu {
+    display: none;
+}
+@media (min-width: 320px) and (max-width: 768px){
+    .header__nav {
+        display: none;
+    }
+
+    .header__menu {
+        display: block;
+    }
+}
