--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -21,3 +21,14 @@
 input , textarea {
     outline: none;
 }
+@media (max-width: 1024px) {
+    .content {
+        max-width: calc(992px + 16px*2);
+    }
+}
+@media (min-width: 320px) and (max-width: 768px) {
+    .content {
+        max-width: calc(100% - 16px*2);
+        padding: 16px;
+    }
+}
