--- a/assets/styles/banner.css
+++ b/assets/styles/banner.css
@@ -131,3 +131,86 @@
     left: -50px;
     
 }
+@media (max-width: 1024px) {
+    .banner {
+        padding: 137px 20px 106px 0;
+    }
+    .logo:first-child {
+        width: 69px;
+        height: 41px;
+    }
+    .logo:last-child {
+        width: 43px;
+        height: 41px;
+    }
+    .banner__tittle {
+        font-size: 36px;
+        line-height: 42px;
+        max-width: 454px;
+    }
+    .banner__line {
+        width: 115px;
+    }
+    .banner__description {
+        font-size: 14px;
+        line-height: 16px;
+    }
+    .banner__button {
+        width: 183px;
+        height: 50px;
+        font-size: 18px;
+        line-height: 25px;
+    }
+    .form , .form__submit {
+        max-width: 398px;
+    }
+    .form__tittle {
+        font-size: 18px;
+        line-height: 25px;
+    }
+}
+@media (min-width: 320px) and (max-width: 768px) {
+    .banner {
+        padding: 84px 0 50px;
+    }
+    .banner__box {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .form {
+        max-width: 288px;
+        margin-top: 56px;
+    }
+    .form__submit {
+        max-width: 288px;
+    }
+    .banner__info  {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .banner__logo__container {
+        display: none;
+    }
+    .banner__tittle {
+        font-size: 36px;
+        line-height: 42px;
+    }
+    .banner__line {
+        width: 134px;
+        margin: 0 auto;
+    }
+    .banner__description {
+        font-size: 14px;
+        line-height: 16px;
+    }
+    .banner__button {
+        width: 288px;
+        height: 50px;
+        font-size: 18px;
+        line-height: 25px;
+    }
+}
