--- a/assets/styles/social.css
+++ b/assets/styles/social.css
@@ -33,3 +33,45 @@
 .social__media__link:not(:last-child) {
     margin: 0 45px 0 0;
 }
+@media (max-width: 1024px) {
+    .social__media {
+        padding: 10px 0 13px;
+    }
+    .social__media__tittle {
+        font-size: 18px;
+        line-height: 25px;
+        margin: 0 0 23px;
+    }
+    .social__media__description {
+        font-size: 14px;
+        line-height: 16px;
+    }
+    .social__media__link > svg {
+        width: 85%;
+        height: 85%;
+    }
+    .social__media__links {
+        margin-left: 38px;
+    }
+    .social__media__link:not(:last-child) {
+        margin: 0 32px 0 0;
+    }
+}
+@media (min-width: 320px) and (max-width: 768px) {
+    .social__media__box {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .social__media__info {
+        text-align: center;
+        margin-bottom: 34px;
+    }
+    .social__media__link > svg {
+        width: 55%;
+        height: 55%;
+    }
+    .social__media__link:not(:last-child) {
+        margin: 0 22px 0 0;
+    }
+}
