--- a/assets/styles/awesome.css
+++ b/assets/styles/awesome.css
@@ -57,3 +57,57 @@ hr {
     text-align: center;
     display: inline-block;
 }
+@media (max-width: 1024px) {
+    .awesome__tittle {
+        font-size: 24px;
+        line-height: 28px;
+    }
+    .project__line {
+        width: 142px;
+    }
+    .awesome__tittle--description , .awesome__about--text {
+        font-size: 14px;
+        line-height: 16px;
+    }
+    .awesome__about--tittle {
+        font-size: 18px;
+        line-height: 25px;
+    }
+    .awesome__about {
+        max-width: 318px;
+        height: 310px;
+    }
+    .awesome__about > img {
+        width: 79px;
+        height: 79px;
+    }
+}
+@media (min-width: 320px) and (max-width: 768px) {
+    .awesome__about {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        width: 288px;
+        height: 318px;
+    }
+    .awesome__tittle {
+        font-size: 18px;
+        line-height: 21px;
+    }
+    .awesome__tittle--description {
+        font-size: 13px;
+        line-height: 15px;
+    }
+    .awesome__about--tittle {
+        font-size: 18px;
+        line-height: 25px;
+    }
+    .awesome__about--text {
+        font-size: 14px;
+        line-height: 16px;
+    }
+    .project__line {
+        width: 134px;
+    }
+}
