--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -26,7 +26,7 @@ input , textarea {
         max-width: calc(992px + 16px*2);
     }
 }
-@media (min-width: 320px) and (max-width: 768px) {
+@media (max-width: 768px) {
     .content {
         max-width: calc(100% - 16px*2);
         padding: 16px;
