--- a/assets/styles/prices.css
+++ b/assets/styles/prices.css
@@ -28,7 +28,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 530px;
 }
 .prices__option__offers {
     width: 370px;
@@ -138,7 +137,16 @@
         height: 453px;
     }
 }
-@media (min-width: 320px) and (max-width: 768px) {
+@media (max-width: 768px) {
+    .prices {
+        padding: 46px 0 26px;
+    }
+    .prices__box {
+        display: flex;
+        flex-direction: column;
+        align-items:center;
+        justify-content: space-between;
+    }
     .price__option__tarif {
         font-size: 18px;
         line-height: 25px;
