--- a/assets/styles/social.css
+++ b/assets/styles/social.css
@@ -57,7 +57,7 @@
         margin: 0 32px 0 0;
     }
 }
-@media (min-width: 320px) and (max-width: 768px) {
+@media (max-width: 768px) {
     .social__media__box {
         flex-direction: column;
         align-items: center;
