--- a/assets/styles/tabs.css
+++ b/assets/styles/tabs.css
@@ -127,7 +127,7 @@
         max-width: 482px;
     }
 }
-@media (min-width: 320px) and (max-width: 768px) {
+@media (max-width: 768px) {
     .tabs__image {
         display: none;
     }
@@ -135,10 +135,10 @@
         width: calc(100% - 100px - 93px*2); 
     }
     .tabs__menu--btn--active {
-        width: 100px;
+        max-width: 100px;
     }
     .tabs__menu--btn {
-        width: 93px;
+        max-width: 93px;
     }
     .tabs__about__tittle {
         font-size: 18px;
@@ -152,7 +152,7 @@
         text-align: center;
     }
     .tabs__download {
-        width: 242px;
+        max-width: 242px;
         height: 50px;
         font-size: 18px;
         line-height: 25px;
