--- a/assets/styles/forms.css
+++ b/assets/styles/forms.css
@@ -26,7 +26,6 @@
 }
 .contact__form {
     width: 100%;
-    height: 210px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -38,7 +37,6 @@
 }
 .contact__form__message {
     width: 569px;
-    height: 210px;
     border: none;
     border-bottom: 1px solid #BDBDBD;
     resize: none;
@@ -82,4 +80,56 @@
 .contact__box {
     position: relative;
 }
-
+@media (max-width: 1024px) {
+    .contact {
+        padding: 96px 0 50px;
+    }
+    .contact__tittle {
+        font-size: 24px;
+        line-height: 28px;
+        margin-bottom: 46px;
+    }
+    .project__line {
+        width: 144px;
+    }
+    .contact__description {
+        font-size: 14px;
+        line-height: 16px;
+        margin: 32px 0 72px;
+    }
+    .user__info , .contact__userinfo , .contact__form__message {
+        max-width: 486px;
+    }
+    .contact__button {
+        width: 318px;
+        font-size: 18px;
+        line-height: 25px;
+    }
+}
+@media (max-width: 768px) {
+    .contact {
+        padding: 46px 0 40px;
+    }
+    .project__line {
+        width: 134px;
+    }
+    .contact__description {
+        font-size: 14px;
+        line-height: 16px;
+        margin: 24px 0 64px;
+    }
+    .user__info , .contact__userinfo , .contact__form__message {
+        max-width: 288px;
+    }
+    .contact__form {
+        flex-direction: column;
+        align-items: center;
+    }
+    .contact__button {
+        width: 288px;
+        height: 50px;
+    }
+    .contact__form__message {
+        margin-top: 50px;
+    }
+}
