--- a/assets/styles/reviews.css
+++ b/assets/styles/reviews.css
@@ -33,10 +33,12 @@
 
 .review__container{
     display:flex;
-    justify-content: space-between;
 }
 .review{
     width: 370px;
+}
+.review:not(:last-child) {
+    margin-right: 30px;
 }
 
 .review__subject__text {
@@ -188,22 +190,6 @@
         padding: 50px 15px ;
         width: 288px; 
     }
-    .review {
-        display: flex;
-        flex-direction: column;
-        flex-basis: 288px;
-        height: 100%;
-    }
-    .review__container {
-        overflow: hidden;
-        width: 400%;
-        height: 100%;
-    }
-    .switch {
-        width: 25%;
-        display: flex;
-        transition: all 0.6s ease;
-    }
     .review__autor {
         max-width: 42px 0 0;
     }
@@ -226,6 +212,22 @@
         font-size: 13px;
         line-height: 15px;
     }
+    .review__container {
+        padding: 0 calc((100% - 288px)/2);
+    }
+    
+
+
+
+
+
+
+
+
+
+
+
+
     .design {
         padding: 46px 0 58px;
         background-image: url(../images/reviews/adapt.png);
