--- a/assets/styles/reviews.css
+++ b/assets/styles/reviews.css
@@ -139,11 +139,7 @@
     text-transform: capitalize;
     margin: 0 auto;
 }
-.review__switcher {
-    margin: 0 auto;
-    margin-top: 50px;
-    position: relative;
-    left: 50%;
+.slider__wrapper {
     display: none;
 }
 @media (max-width: 1024px) {
@@ -183,39 +179,75 @@
     .project__line {
         max-width: 134px;
     }
-    .review__switcher {
-        display: block;
-    }
-    .review__subject {
-        padding: 50px 15px ;
-        width: 288px; 
-    }
-    .review__autor {
-        max-width: 42px 0 0;
-    }
-    .review__subject  {
-        padding: 50px 15px ;
-    }
-    .review__subject__text , .design__description {
+    .design__description {
         font-size: 14px;
         line-height: 16px;
     }
-    .review__autor__image {
-        width: 57px;
-        height: 57px;
-    }
-    .review__autor__name__tittle {
-        font-size: 14px;
-        line-height: 19px;
-    }
-    .review__autor__name__subtittle {
-        font-size: 13px;
-        line-height: 15px;
-    }
     .review__container {
-        padding: 0 calc((100% - 288px)/2);
+        display: none;
     }
-    
+    .slider__wrapper {
+        display: block;
+        width: 370px;
+        overflow: hidden;
+    }
+    .slider__box {
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .slider__navigation {
+        position: relative;
+        left: 50%;
+        transform: translateX(-20%);
+        display: flex;
+        margin-top: 50px;
+    }
+    .bar {
+        width: 10px;
+        height: 10px;
+        background-color: #FFFFFF;
+        border: 1px solid #000000;
+        border-radius: 50%;
+        transition: all 0.6s ease;
+    }
+    .bar:nth-child(2) {
+        margin: 0 50px;
+    }
+    .bar:hover {
+        transform: scale(1.1);
+        background-color: #86878B;
+    }
+    input [name="radio"] {
+        position: absolute;
+        visibility: hidden;
+    }
+    .slider {
+        width: 400%;
+        height: 100%;
+        display: flex;
+    }
+    .slide {
+        width: 25%;
+        transition: all 0.6s ease;
+    }
+    .slide  img {
+        width: 100%;
+        height: 100%;
+    }
+    #r1:checked ~ .s1 {
+        margin-left: 0;
+    }
+    #r2:checked ~ .s1 {
+        margin-left: -25%;
+    }
+    #r3:checked ~ .s1 {
+        margin-left: -50%;
+    }
+
+
+
+
 
 
 
